add units(wip), font(wip)

--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="utf-8">
   <title>的場梨沙ちゃんをよろしく</title>
+  <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+  <link rel="stylesheet" href="node_modules/aos/dist/aos.css">
   <link rel="stylesheet" href="css/index.sass">
+  <script src="node_modules/aos/dist/aos.js" type="module"></script>
   <script src="js/index.js" type="text/javascript"></script>
 </head>
 <body>
   <div class="background">
     <video id="bg-video" class="page" src="img/risa.mp4" muted autoplay playsinline preload="auto"></video>
     <div class="cover"></div>
+  </div>
+  <div class="contents">
+    <div class="first">
+      <a href="#" class="scroll-button">
+        <span></span><span></span><span></span><span></span><span></span>
+      </a>
+    </div>
+    <div class="content-body unit clearfix">
+      <h2 data-aos="fade-down">ユニット</h2>
+
+      <div class="spacer"></div>
+      <div class="box left momo-pear-berry" data-aos="fade-right">
+        <h3>ももぺあべりー</h3>
+        <p>櫻井桃華・的場梨沙・橘ありすの12歳3人組からなるユニット。全員違った方向に大人っぽさがあり、プロ意識が高い。属性としては三色バランス良く揃っている。</p>
+        <div class="unit-image-3">
+          <img src="img/petit/momoka.png" alt="櫻井桃華" data-aos="fade-right">
+          <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-right" data-aos-delay="200">
+          <img src="img/petit/arisu.png" alt="橘ありす" data-aos="fade-right" data-aos-delay="400">
+        </div>
+      </div>
+
+      <div class="spacer"></div>
+      <div class="box right sexy-panthers" data-aos="fade-left">
+        <h3>セクシーパンサーズ</h3>
+        <p>ユニット名にもある通り（背伸びして）セクシーを目指す3人組ユニット。<s>だがしかしバストは72より小さい。</s>全員がギャル要素を持っており、属性としてはパッションで統一されている。</p>
+        <div class="unit-image-3">
+          <img src="img/petit/mary.png" alt="メアリー・コクラン" data-aos="fade-left" data-aos-delay="400">
+          <img src="img/petit/rika.png" alt="城ヶ崎莉嘉" data-aos="fade-left" data-aos-delay="200">
+          <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-left">
+        </div>
+      </div>
+
+      <div class="spacer"></div>
+      <div class="box left rough-and-fears">
+        <h3>ラフ＆フィアーズ</h3>
+        <p></p>
+        <div class="unit-image-3">
+          <img src="img/petit/koume.png" alt="白坂小梅" data-aos="fade-right">
+          <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-right" data-aos-delay="200">
+          <img src="img/petit/mirei.png" alt="早坂美玲" data-aos="fade-right" data-aos-delay="400">
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
