--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-60227528-2');
   </script>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="utf-8">
-  <title>的場梨沙ちゃんをよろしく</title>
+  <title>的場梨沙ちゃんを応援するページ</title>
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="node_modules/aos/dist/aos.css">
   <link rel="stylesheet" href="css/index.sass">
   <script src="node_modules/aos/dist/aos.js" type="module"></script>
   <script src="js/index.js" type="text/javascript"></script>
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:creator" content="@ssasasssaassasa">
+  <meta property="og:title" content="的場梨沙ちゃんを応援するページ">
+  <meta property="og:url" content="https://nkudryavka.github.io/risa-7th-cg-election/">
+  <meta property="og:image" content="https://nkudryavka.github.io/risa-7th-cg-election/card-image.png">
 </head>
 <body>
   <div class="background">
@@ -27,9 +32,9 @@
   </div>
   <div class="contents">
     <div class="first">
-      <a href="#" class="scroll-button">
+      <span class="scroll-button">
         <span></span><span></span><span></span><span></span><span></span>
-      </a>
+      </span>
     </div>
     <div class="content-body unit clearfix">
       <h2 data-aos="fade-down">ユニット</h2>
@@ -37,8 +42,8 @@
       <div class="spacer"></div>
       <div class="box left momo-pear-berry" data-aos="fade-right">
         <h3>ももぺあべりー</h3>
-        <p>櫻井桃華・的場梨沙・橘ありすの12歳3人組からなるユニット。全員違った方向に大人っぽさがあり、プロ意識が高い。属性としては三色バランス良く揃っている。</p>
-        <div class="unit-image-3">
+        <p>12歳組の3人からなるユニット。全員違った方向に大人っぽさがあり、プロ意識が高い。U149でもユニットとしては出ていないが対比を意識した描かれかたをしている場面がある。属性としては三色揃っている。</p>
+        <div class="unit-image unit-image-3">
           <img src="img/petit/momoka.png" alt="櫻井桃華" data-aos="fade-right">
           <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-right" data-aos-delay="200">
           <img src="img/petit/arisu.png" alt="橘ありす" data-aos="fade-right" data-aos-delay="400">
@@ -48,8 +53,8 @@
       <div class="spacer"></div>
       <div class="box right sexy-panthers" data-aos="fade-left">
         <h3>セクシーパンサーズ</h3>
-        <p>ユニット名にもある通り（背伸びして）セクシーを目指す3人組ユニット。<s>だがしかしバストは72より小さい。</s>全員がギャル要素を持っており、属性としてはパッションで統一されている。</p>
-        <div class="unit-image-3">
+        <p>ユニット名にもある通り（背伸びして）セクシーを目指す12歳と11歳の3人組ユニット。<s>だがしかしバストは72より小さい。</s>全員がギャル要素を持っており、属性としてはパッションで統一されている。実は11歳のメアリーが一番身長が高い。</p>
+        <div class="unit-image unit-image-3">
           <img src="img/petit/mary.png" alt="メアリー・コクラン" data-aos="fade-left" data-aos-delay="400">
           <img src="img/petit/rika.png" alt="城ヶ崎莉嘉" data-aos="fade-left" data-aos-delay="200">
           <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-left">
@@ -57,15 +62,85 @@
       </div>
 
       <div class="spacer"></div>
-      <div class="box left rough-and-fears">
+      <div class="box left rough-and-fears" data-aos="fade-right">
         <h3>ラフ＆フィアーズ</h3>
-        <p></p>
-        <div class="unit-image-3">
+        <p>個性の強い3人の揃ったユニット。ライバルユニットとして登場した時のセリフでは梨沙が珍しく目立たないことを気にしている。あと「もん！もん！！」がかわいい。属性としては三色揃っている。</p>
+        <div class="unit-image unit-image-3">
           <img src="img/petit/koume.png" alt="白坂小梅" data-aos="fade-right">
           <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-right" data-aos-delay="200">
           <img src="img/petit/mirei.png" alt="早坂美玲" data-aos="fade-right" data-aos-delay="400">
         </div>
       </div>
+
+      <div class="spacer"></div>
+      <div class="box right oubutai" data-aos="fade-left">
+        <h3>桜舞隊</h3>
+        <p>出てくるたびに部分で出てきたりする（晴・小春・巴や舞・梨沙・小春など）こともあるユニット。全体では5人ユニットとなる。パッション勢の激しい気質とキュート勢のゆるやかな気質が混じり合うが、上を向いている。晴がユニットを掛け持ちしている巴を気遣う場面が見られるなど、晴のイケメン部分が見えることも。</p>
+        <div class="unit-image unit-image-5">
+          <img src="img/petit/mai.png" alt="福山舞" data-aos="fade-left" data-aos-delay="400">
+          <img src="img/petit/koharu.png" alt="古賀小春" data-aos="fade-left" data-aos-delay="300">
+          <img src="img/petit/haru.png" alt="結城晴" data-aos="fade-left" data-aos-delay="200">
+          <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-left" data-aos-delay="100">
+          <img src="img/petit/tomoe.png" alt="村上巴" data-aos="fade-left">
+        </div>
+      </div>
+
+      <div class="spacer"></div>
+      <div class="box left melt-choco-pot" data-aos="fade-right">
+        <h3>メルト・チョコ・ポット</h3>
+        <p>今年のバレンタインに登場した新しいユニット。全員がチョコの色をしたドレスに身を包んでいた。「オトナの色気は甘くないのよ！」と言いながらビターに攻めてくる。千佳ちゃんが「今日のチカはちょっとオトナ向けっ♪」と言うのもかわいい。</p>
+        <div class="unit-image unit-image-4">
+          <img src="img/petit/chika.png" alt="横山千佳" data-aos="fade-right">
+          <img src="img/petit/hitomi.png" alt="丹羽仁美" data-aos="fade-right" data-aos-delay="133">
+          <img src="img/petit/rumi.png" alt="和久井留美" data-aos="fade-right" data-aos-delay="266">
+          <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-right" data-aos-delay="400">
+        </div>
+      </div>
+
+      <div class="spacer"></div>
+      <div class="box right sing-my-way" data-aos="fade-left">
+        <h3>シング・マイ・ウェイ</h3>
+        <p>泰葉の「私たちの歌、贈ります…！」というセリフと梨沙「熱い視線もよこしなさい！」という対照が素晴らしいユニット。泰葉と梨沙だけではともすればバラバラの方向を向いてしまいそうなところを美由紀が調和させているように感じるのもポイント。属性としては三色揃っている。</p>
+        <div class="unit-image unit-image-3">
+          <img src="img/petit/yanase.png" alt="柳瀬美由紀" data-aos="fade-left" data-aos-delay="400">
+          <img src="img/petit/yasuha.png" alt="岡崎泰葉" data-aos="fade-left" data-aos-delay="200">
+          <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-left">
+        </div>
+      </div>
+
+      <div class="spacer"></div>
+      <div class="beat-shooter" data-aos="fade-up">
+        <h3>ビートシューター</h3>
+        <p>言わずと知れた（？）的場梨沙のユニットの中では恐らく一番有名なユニット。南条光を加えた「ビートシューター with 光」もある。それぞれ違った方向に尖っている面があるが、仲は良いらしく互いにサッカーに誘ったりショッピングに誘ったりしているらしい。U149でもこの二人の掛け合いは度々描かれている。二人ともダンスが得意でプロ意識が高い。背中合わせで歌う曲が似合いそう。</p>
+        <div class="unit-image unit-image-bs">
+          <img src="img/petit/haru.png" alt="結城晴" data-aos="fade-up">
+          <img src="img/petit/risa.png" alt="的場梨沙" data-aos="fade-up">
+        </div>
+      </div>
+
+      <div class="spacer"></div>
+      <div style="float: left">
+        ちなみに、的場梨沙に声が付くと声が揃うユニットにはラフ＆フィアーズ、どうぶつ☆ふぇすた、ももぺあべりー、ファントムキャッツ！、ビートシューターなどがある。
+      </div>
+    </div>
+    <div class="mid-scroll">
+      <span class="scroll-button"><span></span></span>
+    </div>
+    <div class="content-body">
+      <h2 style="padding-top: 2vh" data-aos="fade-down">応援企画</h2>
+      <div>
+        <blockquote class="twitter-tweet tw-align-center"><p lang="ja" dir="ltr"><a href="https://twitter.com/hashtag/%E7%AC%AC7%E5%9B%9E%E3%82%B7%E3%83%B3%E3%83%87%E3%83%AC%E3%83%A9%E3%82%AC%E3%83%BC%E3%83%AB%E7%B7%8F%E9%81%B8%E6%8C%99?src=hash&amp;ref_src=twsrc%5Etfw">#第7回シンデレラガール総選挙</a><br><br>相互投票支援企画「<a href="https://twitter.com/hashtag/%E3%82%8A%E3%81%95%E3%81%BA%E3%81%82?src=hash&amp;ref_src=twsrc%5Etfw">#りさぺあ</a> 」が始まりました！イラスト・スクショ・ムービーなどで「的場梨沙」とあなたの担当アイドルを「ぺあ」にしてみませんか？あなたのぺあで、梨沙Pもその子に関心を持つチャンス！？あなたが思うぺあをシェアして、総選挙を楽しみましょう！ <a href="https://t.co/AGdeKoP9Fh">pic.twitter.com/AGdeKoP9Fh</a></p>&mdash; やきゅ (@gdkyujbyaq) <a href="https://twitter.com/gdkyujbyaq/status/983635953716625408?ref_src=twsrc%5Etfw">April 10, 2018</a></blockquote><script async scriptrc="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+    </div>
+    <div class="mid-scroll">
+      <span class="scroll-button"><span></span></span>
+    </div>
+    <div class="last">
+      <footer>
+        <p>あなたもこのカッコイイもカワイイもみせてくれる的場梨沙を一緒に応援してみませんか？</p>
+        <p>あなたの一票をお待ちしております</p>
+        <p><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="的場梨沙ちゃんを応援するページ" data-url="https://nkudryavka.github.io/risa-7th-cg-election/" data-hashtags="第7回シンデレラガール総選挙 #的場梨沙" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+      </footer>
     </div>
   </div>
 </body>
