--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 </head>
 <body>
   <div class="background">
-    <video id="bg-video" class="page" src="img/risa.mp4" muted autoplay playsinline preload="auto"></video>
+    <!-- <video id="bg-video" class="page" src="img/risa.mp4" muted autoplay playsinline preload="auto"></video> -->
+    <video id="bg-video" class="page" src="https://nkudryavka.github.io/risa-7th-cg-election/risa.b6da8611.mp4" muted autoplay playsinline preload="auto"></video>
     <div class="cover"></div>
   </div>
   <div class="contents">
