add vote button

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
       <footer>
         <p>あなたもこのカッコイイもカワイイもみせてくれる的場梨沙を一緒に応援してみませんか？</p>
         <p>あなたの一票をお待ちしております</p>
+        <p><a href="http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/vote/index/200007/0/0/0?keyword=%E7%9A%84%E5%A0%B4%E6%A2%A8%E6%B2%99&amp;l_frm=Vote_1&amp;rnd=" class="vote-button" target="_blank">的場梨沙に投票する</a></p>
         <p><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="的場梨沙ちゃんを応援するページ" data-url="https://nkudryavka.github.io/risa-7th-cg-election/" data-hashtags="第7回シンデレラガール総選挙 #的場梨沙" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
       </footer>
     </div>
