change sexy panthers sentence (thanks @mofuchan5 !)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="spacer"></div>
       <div class="box right sexy-panthers" data-aos="fade-left">
         <h3>セクシーパンサーズ</h3>
-        <p>ユニット名にもある通り（背伸びして）セクシーを目指す12歳と11歳の3人組ユニット。<s>だがしかしバストは72より小さい。</s>全員がギャル要素を持っており、属性としてはパッションで統一されている。実は11歳のメアリーが一番身長が高い。</p>
+        <p>小学生＆中学生ながらオトナの魅力に憧れる3人で構成されているユニット。ちょっぴり背伸びしたおませな言動がすごくかわいい。属性としてはパッションで統一されている。実は11歳で最年少のメアリーが一番背が高い。</p>
         <div class="unit-image unit-image-3">
           <img src="img/petit/mary.png" alt="メアリー・コクラン" data-aos="fade-left" data-aos-delay="400">
           <img src="img/petit/rika.png" alt="城ヶ崎莉嘉" data-aos="fade-left" data-aos-delay="200">
